@@ -26,6 +26,8 @@
 
 #include <config.h>
 
+#include <stdio.h>
+
 #include <libspectrum.h>
 
 #include "debugger/debugger.h"
@@ -84,6 +86,10 @@ libspectrum_byte *slt_screen;	/* The screenshot from the .slt file */
 int slt_screen_level;		/* The level of the screenshot.
 				   Not used for anything AFAIK */
 
+static size_t compare_memory( void );
+
+int bytes_to_shove = 0;
+
 int spectrum_interrupt(void)
 {
   /* FIXME: find some better way to deal with speed == 0 */
@@ -119,6 +125,17 @@ int spectrum_interrupt(void)
   if(display_frame()) return 1;
   printer_frame();
   z80_interrupt();
+
+  /* 56k bits per second = 7k bytes per second = 140 bytes per frame */
+  /* 128k bits per second = 16k bytes per second = 320 bytes per frame */
+/*    bytes_to_shove -= 320; */
+/*    if( bytes_to_shove < 0 ) { */
+
+/*      bytes_to_shove = compare_memory(); */
+
+/*      printf( "0x%04x (%d frames)\n", bytes_to_shove, */
+/*  	    ( bytes_to_shove + 319 ) / 320 ); */
+/*    } */
 
   /* Add an interrupt unless they're being generated by .rzx playback */
   if( ! rzx_playback ) {
@@ -301,4 +318,65 @@ spectrum_unattached_port( int offset )
   }
 
   return 0;		/* Keep gcc happy */
+}
+
+static libspectrum_byte oldRAM[8][0x4000];
+
+#define OVERHEAD 3
+
+static size_t
+compare_memory( void )
+{
+  int page, offset, i;
+  int copy_page;
+  size_t size = 0;
+  size_t length, stored_length;
+
+  for( page = 0; page < 8; page++ ) {
+  
+    copy_page = 0;
+
+    for( offset = 0; offset < 0x4000; offset++ ) {
+
+      if( oldRAM[page][offset] != RAM[page][offset] ) {
+	
+	offset++; length = 1;
+	
+      find_run:
+	for( ;
+	     offset < 0x4000 && oldRAM[page][offset] != RAM[page][offset];
+	     length++, offset++ ) ;
+	
+	stored_length = length;
+
+	/* Start looking ahead to see if it's worth merging two runs */
+	for( i = 0; i < OVERHEAD; i++ ) {
+	  
+	  offset++; length++;
+	  
+	  /* Break out if we've reached the end of a page */
+	  if( offset >= 0x4000 ) break;
+	  
+	  /* If this doesn't match, add to the current run */
+	  if( oldRAM[page][offset] != RAM[page][offset] ) goto find_run;
+	  
+	  /* If it does match, try more bytes until it wouldn't be
+	     worth merging the two runs */
+	}
+
+	/* When we reach here, it's either because we reached the end
+	   of a page or because it wasn't worth adding to the current
+	   run */
+	size += OVERHEAD + stored_length;
+    
+	copy_page = 1;
+      }
+
+    }
+    
+    if( copy_page ) memcpy( oldRAM[page], RAM[page], 0x4000 );
+
+  }
+
+  return size;
 }
